# egress-filter

./: .coverage  .gitignore  AGENTS.md  AUDIT.md  CLAUDE.md  DESIGN-REVIEW.md  POETRY_INVESTIGATION.md  README.md  TODO.md  action.yml  main.py  package-lock.json  package.json  proxy.py  pyproject.toml  test_connections.py  test_ipv6_blocker.py  unified_proxy.py
.github/workflows/: check-deps.yml  debug-mitmproxy-dns.yml  test-baseline.yml  test-cache-permissions.yml  test-dns-block.yml  test-docker-image-attribution.yml  test-insecure.yml  test-issue-141-go-proxy.yml  test-issue-141-secure-repo.yml  test-issue-87.yml  test-mitmproxy-wireguard.yml  test-mitmproxy.yml  test-netns-bypass.yml  test-permissions.yml  test-policy-cli.yml  test-proxy-restart.yml  test-raw-socket-bypass.yml  test-sfw-free.yml  test-sudo-logging.yml  (+4 more)
disable-sudo/: action.yml  index.js
docs/: POLICY.md  docker-tracking.md  policy-integration-design.md  policy-matching-algorithms.md  policy-syntax-design.md  socket-api.md  udp-fastpath.md
enable-sudo/: action.yml  index.js
scripts/: cleanup-iptables.sh  setup-proxy.sh  test-connectivity.sh
src/: runc_wrapper.py
tests/: conftest.py  test_dns_cache.py  test_handler_mitmproxy.py  test_handler_nfqueue.py  test_permissions.py  test_pid_tracking.sh  test_policy.py  test_policy_cli.py  test_policy_defaults.py  test_policy_enforcer.py  test_policy_grammar.py  test_policy_matcher.py  test_policy_parser.py  test_policy_properties.py  test_proc.py  test_purl.py  test_runc_wrapper.py  test_socket_dev.py  test_sudo.py
tools/: dump_mitmproxy_flows.py
(+64 files in other folders)
